--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -42,6 +42,16 @@
 
     "producers_title" : "Produttori",
 
+    "contact_section_title" : "I nostri dati di contatto",
+
+    "contact_subsection_1_title":"Contatto",
+    
+    "contact_subsection_2_title":"Dati di identificazione",
+    "contact_subsection_2_account":"Conto",
+    "contact_subsection_2_treasury_account":"Conto Tesoreria",
+
+    "contact_subsection_3_title":"Dipartimenti",
+
     "footer_section_1_title" :"Termini legali",
     "footer_section_1_subtitle_1" : "Termini e condizioni",
     "footer_section_1_subtitle_2" : "Regolamento",
