creating career page

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,6 +2,8 @@
     "navbar_link_1": "HOME",
     "navbar_link_2": "ABOUT US",
     "navbar_link_3": "CONTACT",
+    "navbar_carieer_link": "CAREER",
+    "navbar_link_home": "HOME",
     "navbar_orders": "ORDERS",
 
 
