--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -2,6 +2,8 @@
     "navbar_link_1": "CASA",
     "navbar_link_2": "CHI SIAMO",
     "navbar_link_3": "CONTACT",
+    "navbar_carieer_link": "CARRIERA",
+    "navbar_link_home": "CASA",
     "navbar_orders": "ORDINI",
 
     "hero_title_1": "2A FARM S.R.L",
