--- a/src/lang/ro.json
+++ b/src/lang/ro.json
@@ -2,7 +2,15 @@
     "navbar_link_1": "ACASA",
     "navbar_link_2": "DESPRE NOI",
     "navbar_link_3": "CONTACT",
+    "navbar_carieer_link": "CARIERA",
+    "navbar_link_home": "ACASA",
     "navbar_orders": "COMENZI",
+
+    "career_job_1_title": "Picking marfa",
+    "career_job_1_description": "Trebuie sa iei marfa si sa te joci pana zapacesti de cap",
+    
+    "career_job_salary": "Salariu:",
+
 
     "hero_title_1": "2A FARM S.R.L",
     "hero_description_1": "Suntem 2A Farm S.R.L. o companie tanara, cu capital 100% romanesc, infiintata si autorizata ANM-DM in anul 2011 si avand activitate principala distributia de medicamente catre farmaciile independente din intreaga tara.",
